--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 # docker compose up -d --build --force-recreate
 version: '3.8'
-name: infra
+name: ops
 
 services:
 
@@ -8,7 +8,7 @@ services:
     container_name: jenkins
     build:
       dockerfile_inline: |
-        FROM jenkins/jenkins:jdk17
+        FROM jenkins/jenkins:jdk21
         USER root
         RUN apt-get update && apt-get install -y lsb-release
         RUN curl -fsSLo /usr/share/keyrings/docker-archive-keyring.asc \
@@ -19,15 +19,16 @@ services:
           $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list
         RUN apt-get update && apt-get install -y docker-ce maven
         RUN usermod -aG docker jenkins
-        RUN usermod -aG daemon jenkins
-        USER jenkins
+      # RUN usermod -aG daemon jenkins
+      # RUN usermod -aG root jenkins
+      # USER jenkins
       # RUN jenkins-plugin-cli --plugins "blueocean docker-workflow"
     ports:
-      - 9000:8080
+      - 9080:8080
       - 50000:50000
     volumes:
-      - $CONFIG/jenkins:/var/jenkins_home # for mac
-      # - ./data/jenkins_home:/var/jenkins_home # for linux
+      - $CONFIG/jenkins:/var/jenkins_home
+      # for mac distro
       - /var/run/docker.sock:/var/run/docker.sock
     restart: always
     networks:
@@ -47,14 +48,14 @@ services:
   #   networks:
   #     - infra
 
-  artilleryio:
-    container_name: artilleryio
-    image: artilleryio/artillery:latest
-    # platform: linux/amd64
-    volumes:
-      - $CONFIG/artilleryio:/artillery
-    networks:
-      - infra
+  # artilleryio:
+  #   container_name: artilleryio
+  #   image: artilleryio/artillery:latest
+  #   # platform: linux/amd64
+  #   volumes:
+  #     - $CONFIG/artilleryio:/artillery
+  #   networks:
+  #     - infra
 
 networks:
   infra:
